Public export of Nexus code:   - a60d18ffea56c6a499bb37d33de1322f0082f285 by Matthew Piggott <mpiggott@sonatype.com>
GitOrigin-RevId: a60d18ffea56c6a499bb37d33de1322f0082f285