@@ -13,13 +13,12 @@
 package org.sonatype.nexus.repository.security.rest;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
 import javax.ws.rs.core.MediaType;
 
-import org.sonatype.goodies.testsupport.TestSupport;
+import org.sonatype.goodies.testsupport.Test5Support;
 import org.sonatype.nexus.repository.Format;
 import org.sonatype.nexus.repository.Repository;
 import org.sonatype.nexus.repository.manager.RepositoryManager;
@@ -30,16 +29,19 @@ import org.sonatype.nexus.rest.WebApplicationMessageException;
 import org.sonatype.nexus.security.SecuritySystem;
 import org.sonatype.nexus.security.authz.AuthorizationManager;
 import org.sonatype.nexus.security.privilege.ApplicationPrivilegeDescriptor;
-import org.sonatype.nexus.security.privilege.NoSuchPrivilegeException;
 import org.sonatype.nexus.security.privilege.Privilege;
 import org.sonatype.nexus.security.privilege.PrivilegeDescriptor;
 import org.sonatype.nexus.security.privilege.WildcardPrivilegeDescriptor;
 import org.sonatype.nexus.security.privilege.rest.PrivilegeAction;
 import org.sonatype.nexus.selector.SelectorConfiguration;
 import org.sonatype.nexus.selector.SelectorManager;
+import org.sonatype.nexus.testcommon.extensions.AuthenticationExtension;
+import org.sonatype.nexus.testcommon.extensions.AuthenticationExtension.WithUser;
+import org.sonatype.nexus.testcommon.validation.ValidationExtension;
 
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 
@@ -47,7 +49,9 @@ import static org.hamcrest.CoreMatchers.is;
 import static org.hamcrest.CoreMatchers.notNullValue;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -56,8 +60,11 @@ import static org.sonatype.nexus.repository.security.rest.ApiPrivilegeWithReposi
 import static org.sonatype.nexus.repository.security.rest.ApiPrivilegeWithRepository.REPOSITORY_KEY;
 import static org.sonatype.nexus.security.privilege.rest.ApiPrivilegeWithActions.ACTIONS_KEY;
 
-public class RepositoryPrivilegeApiResourceTest
-    extends TestSupport
+@ExtendWith(ValidationExtension.class)
+@ExtendWith(AuthenticationExtension.class)
+@WithUser
+class RepositoryPrivilegeApiResourceTest
+    extends Test5Support
 {
   @Mock
   private SecuritySystem securitySystem;
@@ -85,37 +92,37 @@ public class RepositoryPrivilegeApiResourceTest
 
   private RepositoryPrivilegeApiResource underTest;
 
-  @Before
-  public void setup() throws Exception {
-    when(securitySystem.getAuthorizationManager("default")).thenReturn(authorizationManager);
-    when(repository1.getFormat()).thenReturn(format1);
-    when(repository2.getFormat()).thenReturn(format2);
-    when(repositoryManager.get("repository1")).thenReturn(repository1);
-    when(repositoryManager.get("repository2")).thenReturn(repository2);
-    when(repositoryManager.get("invalid")).thenReturn(null);
-    when(selectorManager.findByName(any())).thenReturn(Optional.of(mock(SelectorConfiguration.class)));
-    when(selectorManager.findByName("invalid")).thenReturn(Optional.empty());
-    when(format1.getValue()).thenReturn("format1");
-    when(format2.getValue()).thenReturn("format2");
+  @BeforeEach
+  void setup() throws Exception {
+    lenient().when(securitySystem.getAuthorizationManager("default")).thenReturn(authorizationManager);
+    lenient().when(repository1.getFormat()).thenReturn(format1);
+    lenient().when(repository2.getFormat()).thenReturn(format2);
+    lenient().when(repositoryManager.get("repository1")).thenReturn(repository1);
+    lenient().when(repositoryManager.get("repository2")).thenReturn(repository2);
+    lenient().when(repositoryManager.get("invalid")).thenReturn(null);
+    lenient().when(selectorManager.findByName(any())).thenReturn(Optional.of(mock(SelectorConfiguration.class)));
+    lenient().when(selectorManager.findByName("invalid")).thenReturn(Optional.empty());
+    lenient().when(format1.getValue()).thenReturn("format1");
+    lenient().when(format2.getValue()).thenReturn("format2");
 
     List<Format> formats = Arrays.asList(format1, format2);
     List<PrivilegeDescriptor> privilegeDescriptors = List.of(new ApplicationPrivilegeDescriptor(false),
-    new WildcardPrivilegeDescriptor(),
-    new RepositoryAdminPrivilegeDescriptor(repositoryManager, formats, false), new RepositoryViewPrivilegeDescriptor(
-        repositoryManager, formats, false),
+        new WildcardPrivilegeDescriptor(),
+        new RepositoryAdminPrivilegeDescriptor(repositoryManager, formats, false),
+        new RepositoryViewPrivilegeDescriptor(
+            repositoryManager, formats, false),
         new RepositoryContentSelectorPrivilegeDescriptor(repositoryManager, selectorManager, formats, false));
 
     underTest = new RepositoryPrivilegeApiResource(securitySystem, privilegeDescriptors);
   }
 
   @Test
-  public void testCreatePrivilege_repositoryView() {
-    when(authorizationManager.getPrivilege("name")).thenThrow(new NoSuchPrivilegeException("name"));
-
-    ApiPrivilegeRepositoryViewRequest apiPrivilege = new ApiPrivilegeRepositoryViewRequest("name", "description", "format1",
-        "repository1", Arrays
-        .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
-            PrivilegeAction.ADD));
+  void testCreatePrivilege_repositoryView() {
+    ApiPrivilegeRepositoryViewRequest apiPrivilege =
+        new ApiPrivilegeRepositoryViewRequest("name", "description", "format1",
+            "repository1", Arrays
+                .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
+                    PrivilegeAction.ADD));
 
     underTest.createPrivilege(apiPrivilege);
 
@@ -126,13 +133,11 @@ public class RepositoryPrivilegeApiResourceTest
   }
 
   @Test
-  public void testCreatePrivilege_repositoryViewInvalidRepository() {
-    when(authorizationManager.getPrivilege("name")).thenThrow(new NoSuchPrivilegeException("name"));
-
+  void testCreatePrivilege_repositoryViewInvalidRepository() {
     ApiPrivilegeRepositoryViewRequest apiPrivilege = new ApiPrivilegeRepositoryViewRequest("name",
         "description", "format1", "invalid", Arrays
-        .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
-            PrivilegeAction.ADD));
+            .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
+                PrivilegeAction.ADD));
 
     try {
       underTest.createPrivilege(apiPrivilege);
@@ -142,18 +147,16 @@ public class RepositoryPrivilegeApiResourceTest
       assertThat(e.getResponse().getStatus(), is(400));
       assertThat(e.getResponse().getMediaType(), is(MediaType.APPLICATION_JSON_TYPE));
       assertThat(e.getResponse().getEntity().toString(),
-              is("ValidationErrorXO{id='*', message='\"Invalid repository 'invalid' supplied.\"'}"));
+          is("ValidationErrorXO{id='*', message='\"Invalid repository 'invalid' supplied.\"'}"));
     }
   }
 
   @Test
-  public void testCreatePrivilege_repositoryViewInvalidFormat() {
-    when(authorizationManager.getPrivilege("name")).thenThrow(new NoSuchPrivilegeException("name"));
-
+  void testCreatePrivilege_repositoryViewInvalidFormat() {
     ApiPrivilegeRepositoryViewRequest apiPrivilege = new ApiPrivilegeRepositoryViewRequest("name",
         "description", "invalid", "*", Arrays
-        .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
-            PrivilegeAction.ADD));
+            .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
+                PrivilegeAction.ADD));
 
     try {
       underTest.createPrivilege(apiPrivilege);
@@ -163,18 +166,16 @@ public class RepositoryPrivilegeApiResourceTest
       assertThat(e.getResponse().getStatus(), is(400));
       assertThat(e.getResponse().getMediaType(), is(MediaType.APPLICATION_JSON_TYPE));
       assertThat(e.getResponse().getEntity().toString(),
-              is("ValidationErrorXO{id='*', message='\"Invalid format 'invalid' supplied.\"'}"));
+          is("ValidationErrorXO{id='*', message='\"Invalid format 'invalid' supplied.\"'}"));
     }
   }
 
   @Test
-  public void testCreatePrivilege_repositoryViewMismatchRepositoryAndFormat() {
-    when(authorizationManager.getPrivilege("name")).thenThrow(new NoSuchPrivilegeException("name"));
-
+  void testCreatePrivilege_repositoryViewMismatchRepositoryAndFormat() {
     ApiPrivilegeRepositoryViewRequest apiPrivilege = new ApiPrivilegeRepositoryViewRequest("name",
         "description", "invalid", "repository1", Arrays
-        .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
-            PrivilegeAction.ADD));
+            .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
+                PrivilegeAction.ADD));
 
     try {
       underTest.createPrivilege(apiPrivilege);
@@ -189,13 +190,12 @@ public class RepositoryPrivilegeApiResourceTest
   }
 
   @Test
-  public void testCreatePrivilege_repositoryAdmin() {
-    when(authorizationManager.getPrivilege("name")).thenThrow(new NoSuchPrivilegeException("name"));
-
-    ApiPrivilegeRepositoryAdminRequest apiPrivilege = new ApiPrivilegeRepositoryAdminRequest("name", "description", "format1",
-        "repository1", Arrays
-        .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
-            PrivilegeAction.ADD));
+  void testCreatePrivilege_repositoryAdmin() {
+    ApiPrivilegeRepositoryAdminRequest apiPrivilege =
+        new ApiPrivilegeRepositoryAdminRequest("name", "description", "format1",
+            "repository1", Arrays
+                .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
+                    PrivilegeAction.ADD));
 
     underTest.createPrivilege(apiPrivilege);
 
@@ -206,13 +206,11 @@ public class RepositoryPrivilegeApiResourceTest
   }
 
   @Test
-  public void testCreatePrivilege_repositoryAdminInvalidRepository() {
-    when(authorizationManager.getPrivilege("name")).thenThrow(new NoSuchPrivilegeException("name"));
-
+  void testCreatePrivilege_repositoryAdminInvalidRepository() {
     ApiPrivilegeRepositoryAdminRequest apiPrivilege = new ApiPrivilegeRepositoryAdminRequest("name",
         "description", "format1", "invalid", Arrays
-        .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
-            PrivilegeAction.ADD));
+            .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
+                PrivilegeAction.ADD));
 
     try {
       underTest.createPrivilege(apiPrivilege);
@@ -222,18 +220,16 @@ public class RepositoryPrivilegeApiResourceTest
       assertThat(e.getResponse().getStatus(), is(400));
       assertThat(e.getResponse().getMediaType(), is(MediaType.APPLICATION_JSON_TYPE));
       assertThat(e.getResponse().getEntity().toString(),
-              is("ValidationErrorXO{id='*', message='\"Invalid repository 'invalid' supplied.\"'}"));
+          is("ValidationErrorXO{id='*', message='\"Invalid repository 'invalid' supplied.\"'}"));
     }
   }
 
   @Test
-  public void testCreatePrivilege_repositoryContentSelector() {
-    when(authorizationManager.getPrivilege("name")).thenThrow(new NoSuchPrivilegeException("name"));
-
+  void testCreatePrivilege_repositoryContentSelector() {
     ApiPrivilegeRepositoryContentSelectorRequest apiPrivilege = new ApiPrivilegeRepositoryContentSelectorRequest("name",
         "description", "format1", "repository1", "contentSelector", Arrays
-        .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
-            PrivilegeAction.ADD));
+            .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
+                PrivilegeAction.ADD));
 
     underTest.createPrivilege(apiPrivilege);
 
@@ -244,13 +240,11 @@ public class RepositoryPrivilegeApiResourceTest
   }
 
   @Test
-  public void testCreatePrivilege_repositoryContentSelectorInvalidRepository() {
-    when(authorizationManager.getPrivilege("name")).thenThrow(new NoSuchPrivilegeException("name"));
-
+  void testCreatePrivilege_repositoryContentSelectorInvalidRepository() {
     ApiPrivilegeRepositoryContentSelectorRequest apiPrivilege = new ApiPrivilegeRepositoryContentSelectorRequest("name",
         "description", "format1", "invalid", "contentSelector", Arrays
-        .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
-            PrivilegeAction.ADD));
+            .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
+                PrivilegeAction.ADD));
 
     try {
       underTest.createPrivilege(apiPrivilege);
@@ -260,18 +254,16 @@ public class RepositoryPrivilegeApiResourceTest
       assertThat(e.getResponse().getStatus(), is(400));
       assertThat(e.getResponse().getMediaType(), is(MediaType.APPLICATION_JSON_TYPE));
       assertThat(e.getResponse().getEntity().toString(),
-              is("ValidationErrorXO{id='*', message='\"Invalid repository 'invalid' supplied.\"'}"));
+          is("ValidationErrorXO{id='*', message='\"Invalid repository 'invalid' supplied.\"'}"));
     }
   }
 
   @Test
-  public void testCreatePrivilege_repositoryContentSelectorInvalidContentSelector() {
-    when(authorizationManager.getPrivilege("name")).thenThrow(new NoSuchPrivilegeException("name"));
-
+  void testCreatePrivilege_repositoryContentSelectorInvalidContentSelector() {
     ApiPrivilegeRepositoryContentSelectorRequest apiPrivilege = new ApiPrivilegeRepositoryContentSelectorRequest("repo",
         "description", "format1", "repository1", "invalid", Arrays
-        .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
-            PrivilegeAction.ADD));
+            .asList(PrivilegeAction.BROWSE, PrivilegeAction.READ, PrivilegeAction.DELETE, PrivilegeAction.EDIT,
+                PrivilegeAction.ADD));
 
     try {
       underTest.createPrivilege(apiPrivilege);
@@ -281,19 +273,19 @@ public class RepositoryPrivilegeApiResourceTest
       assertThat(e.getResponse().getStatus(), is(400));
       assertThat(e.getResponse().getMediaType(), is(MediaType.APPLICATION_JSON_TYPE));
       assertThat(e.getResponse().getEntity().toString(),
-              is("ValidationErrorXO{id='*', message='\"Invalid selector 'invalid' supplied.\"'}"));
+          is("ValidationErrorXO{id='*', message='\"Invalid selector 'invalid' supplied.\"'}"));
     }
   }
 
   @Test
-  public void testUpdatePrivilege_repositoryView() {
+  void testUpdatePrivilege_repositoryView() {
     Privilege priv =
         createPrivilege("repository-view", "priv", "privdesc", false, FORMAT_KEY, "format1", REPOSITORY_KEY,
             "repository1", ACTIONS_KEY, "read,delete");
     when(authorizationManager.getPrivilegeByName("priv")).thenReturn(priv);
 
     ApiPrivilegeRepositoryViewRequest apiPrivilege = new ApiPrivilegeRepositoryViewRequest("priv", "newdescription",
-        "format2", "repository2", Collections.singletonList(PrivilegeAction.DELETE));
+        "format2", "repository2", List.of(PrivilegeAction.DELETE));
 
     underTest.updatePrivilege("priv", apiPrivilege);
 
@@ -304,14 +296,13 @@ public class RepositoryPrivilegeApiResourceTest
   }
 
   @Test
-  public void testUpdatePrivilege_repositoryViewInvalidRepository() {
+  void testUpdatePrivilege_repositoryViewInvalidRepository() {
     Privilege priv =
         createPrivilege("repository-view", "priv", "privdesc", false, FORMAT_KEY, "format1", REPOSITORY_KEY,
             "repository1", ACTIONS_KEY, "read,delete");
-    when(authorizationManager.getPrivilege("priv")).thenReturn(priv);
 
     ApiPrivilegeRepositoryViewRequest apiPrivilege = new ApiPrivilegeRepositoryViewRequest("priv", "newdescription",
-        "format2", "invalid", Collections.singletonList(PrivilegeAction.DELETE));
+        "format2", "invalid", List.of(PrivilegeAction.DELETE));
 
     try {
       underTest.updatePrivilege("priv", apiPrivilege);
@@ -326,13 +317,13 @@ public class RepositoryPrivilegeApiResourceTest
   }
 
   @Test
-  public void testUpdatePrivilege_repositoryAdmin() {
+  void testUpdatePrivilege_repositoryAdmin() {
     Privilege priv = createPrivilege("repository-admin", "priv", "privdesc", false, FORMAT_KEY, "format1",
         REPOSITORY_KEY, "repository1", ACTIONS_KEY, "read,delete");
     when(authorizationManager.getPrivilegeByName("priv")).thenReturn(priv);
 
     ApiPrivilegeRepositoryAdminRequest apiPrivilege = new ApiPrivilegeRepositoryAdminRequest("priv", "newdescription",
-        "format2", "repository2", Collections.singletonList(PrivilegeAction.DELETE));
+        "format2", "repository2", List.of(PrivilegeAction.DELETE));
 
     underTest.updatePrivilege("priv", apiPrivilege);
 
@@ -343,14 +334,9 @@ public class RepositoryPrivilegeApiResourceTest
   }
 
   @Test
-  public void testUpdatePrivilege_repositoryAdminInvalidRepository() {
-    Privilege priv =
-        createPrivilege("repository-view", "priv", "privdesc", false, FORMAT_KEY, "format1", REPOSITORY_KEY,
-            "repository1", ACTIONS_KEY, "read,delete");
-    when(authorizationManager.getPrivilege("priv")).thenReturn(priv);
-
+  void testUpdatePrivilege_repositoryAdminInvalidRepository() {
     ApiPrivilegeRepositoryAdminRequest apiPrivilege = new ApiPrivilegeRepositoryAdminRequest("priv", "newdescription",
-        "format2", "invalid", Collections.singletonList(PrivilegeAction.DELETE));
+        "format2", "invalid", List.of(PrivilegeAction.DELETE));
 
     try {
       underTest.updatePrivilege("priv", apiPrivilege);
@@ -365,14 +351,14 @@ public class RepositoryPrivilegeApiResourceTest
   }
 
   @Test
-  public void testUpdatePrivilege_repositoryContentSelector() {
+  void testUpdatePrivilege_repositoryContentSelector() {
     Privilege priv = createPrivilege("repository-content-selector", "priv", "privdesc", false, FORMAT_KEY, "format1",
         REPOSITORY_KEY, "repository1", CSEL_KEY, "contentSelector", ACTIONS_KEY, "read,delete");
     when(authorizationManager.getPrivilegeByName("priv")).thenReturn(priv);
 
     ApiPrivilegeRepositoryContentSelectorRequest apiPrivilege = new ApiPrivilegeRepositoryContentSelectorRequest("priv",
         "newdescription", "format2", "repository2", "newcontentSelector",
-        Collections.singletonList(PrivilegeAction.DELETE));
+        List.of(PrivilegeAction.DELETE));
 
     underTest.updatePrivilege("priv", apiPrivilege);
 
@@ -383,56 +369,38 @@ public class RepositoryPrivilegeApiResourceTest
   }
 
   @Test
-  public void testUpdatePrivilege_repositoryContentSelectorInvalidRepository() {
-    Privilege priv =
-        createPrivilege("repository-view", "priv", "privdesc", false, FORMAT_KEY, "format1", REPOSITORY_KEY,
-            "repository1", CSEL_KEY, "contentSelector", ACTIONS_KEY, "read,delete");
-    when(authorizationManager.getPrivilege("priv")).thenReturn(priv);
-
+  void testUpdatePrivilege_repositoryContentSelectorInvalidRepository() {
     ApiPrivilegeRepositoryContentSelectorRequest apiPrivilege =
         new ApiPrivilegeRepositoryContentSelectorRequest("priv", "newdescription",
-            "format2", "invalid", "newContentSelector", Collections.singletonList(PrivilegeAction.DELETE));
+            "format2", "invalid", "newContentSelector", List.of(PrivilegeAction.DELETE));
 
-    try {
-      underTest.updatePrivilege("priv", apiPrivilege);
-      fail("create should have failed as repository is invalid.");
-    }
-    catch (WebApplicationMessageException e) {
-      assertThat(e.getResponse().getStatus(), is(400));
-      assertThat(e.getResponse().getMediaType(), is(MediaType.APPLICATION_JSON_TYPE));
-      assertThat(e.getResponse().getEntity().toString(),
-          is("ValidationErrorXO{id='*', message='\"Invalid repository 'invalid' supplied.\"'}"));
-    }
+    WebApplicationMessageException e =
+        assertThrows(WebApplicationMessageException.class, () -> underTest.updatePrivilege("priv", apiPrivilege));
+    assertThat(e.getResponse().getStatus(), is(400));
+    assertThat(e.getResponse().getMediaType(), is(MediaType.APPLICATION_JSON_TYPE));
+    assertThat(e.getResponse().getEntity().toString(),
+        is("ValidationErrorXO{id='*', message='\"Invalid repository 'invalid' supplied.\"'}"));
   }
 
   @Test
-  public void testUpdatePrivilege_repositoryContentSelectorInvalidContentSelector() {
-    Privilege priv =
-        createPrivilege("repository-view", "priv", "privdesc", false, FORMAT_KEY, "format1", REPOSITORY_KEY,
-            "repository1", CSEL_KEY, "contentSelector", ACTIONS_KEY, "read,delete");
-    when(authorizationManager.getPrivilege("priv")).thenReturn(priv);
-
+  void testUpdatePrivilege_repositoryContentSelectorInvalidContentSelector() {
     ApiPrivilegeRepositoryContentSelectorRequest apiPrivilege =
         new ApiPrivilegeRepositoryContentSelectorRequest("priv", "newdescription",
-            "format2", "repository2", "invalid", Collections.singletonList(PrivilegeAction.DELETE));
+            "format2", "repository2", "invalid", List.of(PrivilegeAction.DELETE));
 
-    try {
-      underTest.updatePrivilege("priv", apiPrivilege);
-      fail("create should have failed as repository is invalid.");
-    }
-    catch (WebApplicationMessageException e) {
-      assertThat(e.getResponse().getStatus(), is(400));
-      assertThat(e.getResponse().getMediaType(), is(MediaType.APPLICATION_JSON_TYPE));
-      assertThat(e.getResponse().getEntity().toString(),
-          is("ValidationErrorXO{id='*', message='\"Invalid selector 'invalid' supplied.\"'}"));
-    }
+    WebApplicationMessageException e =
+        assertThrows(WebApplicationMessageException.class, () -> underTest.updatePrivilege("priv", apiPrivilege));
+    assertThat(e.getResponse().getStatus(), is(400));
+    assertThat(e.getResponse().getMediaType(), is(MediaType.APPLICATION_JSON_TYPE));
+    assertThat(e.getResponse().getEntity().toString(),
+        is("ValidationErrorXO{id='*', message='\"Invalid selector 'invalid' supplied.\"'}"));
   }
 
-  private void assertPrivilege(
-      Privilege privilege,
-      String name,
-      String description,
-      String... properties)
+  private static void assertPrivilege(
+      final Privilege privilege,
+      final String name,
+      final String description,
+      final String... properties)
   {
     assertThat(privilege, notNullValue());
     assertThat(privilege.getName(), is(name));
@@ -445,12 +413,12 @@ public class RepositoryPrivilegeApiResourceTest
     }
   }
 
-  private Privilege createPrivilege(
-      String type,
-      String name,
-      String description,
-      boolean readOnly,
-      String... properties)
+  private static Privilege createPrivilege(
+      final String type,
+      final String name,
+      final String description,
+      final boolean readOnly,
+      final String... properties)
   {
     Privilege privilege = new Privilege();
     privilege.setType(type);
